[package]
name = "auxcallback"
version = "0.2.0"
authors = ["Putnam <putnam3145@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
auxtools = { git = "https://github.com/willox/auxtools" }
lazy_static = "1.4.0"
flume = "0.10.5"
coarsetime = "0.1.18"